# examples

./: .directory  README  autoencoder_mnist.ipynb  ball_tracking_kalman_filter.cc
Find-Object-0.4.1-Source/: Find-Object-0.4.1-Source.kdev4
Find-Object-0.4.1-Source/.kdev4/: Find-Object-0.4.1-Source.kdev4
Find-Object-0.4.1-Source/src/: .directory  AboutDialog.cpp  AboutDialog.h  KeypointItem.cpp  KeypointItem.h  MainWindow.cpp
Find-Object-0.4.1-Source/src/rtabmap/: PdfPlot.cpp  PdfPlot.h
Find-Object-0.4.1-Source/src/ui/: aboutDialog.ui
Find-Object-0.4.1-Source/src/utilite/: UDirectory.cpp  UFile.cpp  UPlot.cpp  UPlot.h
HistogramXYPlot/: CMakeLists.txt  HistogramXYPlot.cxx  HistogramXYPlot.kdev4
HistogramXYPlot/.kdev4/: HistogramXYPlot.kdev4
WorldPointPicker/: CMakeLists.txt
cache_nom_patient/: CMakeLists.txt  cache_nom_patient.cpp
celltrack/: COPYRIGHT.txt  README.txt
celltrack/src/: CMakeLists.txt  CaptureManager.cpp  CaptureManager.h  CustomEvents.cpp  CustomEvents.h  ImagePlus.cpp  ImagePlus.h  Makefile  MyApp.cpp  MyCanvas.cpp  MyCanvas.h  MyCapture.cpp  MyCapture.h  MyFrame.cpp  MyFrame.h  MyPoint.h  PictureCanvas.cpp  PictureCanvas.h  PluginBase.cpp  PluginBase.h  Preferences.cpp  Preferences.h  Util.cpp  Util.h  addPrefVariable.php  cvSnakeTrack.cpp  cvSnakeTrack.h
celltrack/src/gui/: Gui.cpp  Gui.h  wxFormBuilder_project - Copy (2).fbp  wxFormBuilder_project.fbp  wxFormBuilder_project.fbp.bak  wxTextCtrl_double.cpp  wxTextCtrl_double.h
celltrack/src/gui/images/: all_icons.xpm  xpm_delete.xpm  xpm_disabled_delete.xpm  xpm_disabled_help.xpm  xpm_disabled_next.xpm  xpm_disabled_pause.xpm  xpm_disabled_play.xpm  xpm_disabled_prev.xpm  xpm_disabled_stop.xpm  xpm_help.xpm  xpm_hover_delete.xpm  xpm_hover_help.xpm  xpm_hover_next.xpm  xpm_hover_pause.xpm  xpm_hover_play.xpm  xpm_hover_prev.xpm  xpm_hover_stop.xpm  xpm_next.xpm  xpm_pause.xpm  xpm_play.xpm  xpm_prev.xpm  xpm_stop.xpm
celltrack/src/lib/wxmathplot-0.03/: mathplot.cpp  mathplot.h  mpFXVector.cpp  mpFXVector.h
celltrack/src/plugins/: .directory  CamShiftPlugin.cpp  CamShiftPlugin.h  CamShiftSidebar.cpp  CamShiftSidebar.h  CombinedTrackingPlugin.cpp  CombinedTrackingPlugin.h  CombinedTrackingSidebar.cpp  CombinedTrackingSidebar.h  CropPlugin.cpp  CropPlugin.h  CropSidebar.cpp  CropSidebar.h  EditContoursPlugin.cpp  EditContoursPlugin.h  EditContoursSidebar.cpp  EditContoursSidebar.h  FilterContoursPlugin.cpp  FilterContoursPlugin.h  FilterContoursSidebar.cpp  FilterContoursSidebar.h  FindContoursPlugin.cpp  FindContoursPlugin.h  FindContoursSidebar.cpp  FindContoursSidebar.h  FindFeaturesPlugin.cpp  FindFeaturesPlugin.h  FindFeaturesSidebar.cpp  FindFeaturesSidebar.h  ImproveContoursPlugin.cpp  ImproveContoursPlugin.h  ImproveContoursSidebar.cpp  ImproveContoursSidebar.h  IncludePlugins.h  LKContoursPlugin.cpp  LKContoursPlugin.h  LKContoursSidebar.cpp  LKContoursSidebar.h  MatchTemplatePlugin.cpp  MatchTemplatePlugin.h  (+35 more)
cvsnakeimage/: CMakeLists.txt  cvsnakeimage.cpp  cvsnakes.cpp  cvsnakes.h
opentld/: CMakeLists.txt  FerNNClassifier.cpp  FerNNClassifier.h  LKTracker.cpp  LKTracker.h  TLD.cpp  TLD.h  parameters.yml  run_tld.cpp  tld_utils.cpp  tld_utils.h
polyDataExtractNormals/: CMakeLists.txt
qmake2cmake/: CMakeLists.txt  converter.cpp  main.cpp
qt-opencv-multithreaded/: .directory  CMakeLists.txt  CameraView.ui  MainWindow.cpp
simpleQT_VTK/: CMakeLists.txt  Main.cxx  MainPanel.cpp  MainPanel.h  MainPanel.ui  SimpleVTK.cxx  SimpleVTK.h  SimpleVTK.ui
sudokuSolver/: AI-Shack--Sudoku-Detector.kdev4  CMakeLists.txt  digitRecognizer.cpp  digitRecognizer.h  sudokuSolver.cpp  sudokuSolver.kdev4
sudokuSolver/.kdev4/: sudokuSolver.kdev4
vtkInQt-master/: VtkInQt.pro  VtkInQt.sln  VtkInQt.vcxproj  VtkInQt.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
